welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:9: error: nbb is already defined as variable nbb
var nbb:Int=2
    ^RunFour:13: error: nbb is already defined as variable nbb
var nbb:Int=3
    ^RunFour:17: error: nbb is already defined as variable nbb
var nbb:Int=4 
    ^