welcome.lessons.welcome.variables.RunFour.scala.code
while (!estSurBiscuit()) {
	avance
	}
var nbb:Int=1
while (!estSurBiscuit()) {
	avance
	}
var nbb:Int=2
while (!estSurBiscuit()) {
	avance
	}
var nbb:Int=3
while (!estSurBiscuit()) {
	avance
	}
var nbb:Int=4